# Project-for-dev3

./: .gitignore  README.md
Project/: README.md
Project/anchor/: Anchor.toml  Cargo.toml
Project/anchor/programs/trustchain_lite/: Cargo.toml
Project/anchor/programs/trustchain_lite/src/: lib.rs  state.rs
Project/frontend/: package-lock.json
Project/frontend/src/app/: layout.tsx
Project/frontend/src/components/: Dashboard.tsx  SolanaProviders.tsx
Project/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
Project/frontend/src/idl/: trustchain_lite.json
Project/frontend/src/lib/solana/: constants.ts  pdas.ts  program.ts
Project/frontend/src/lib/ui/: utils.ts
anchor/: Anchor.toml
anchor/programs/trustchain_lite/src/: lib.rs  state.rs
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: Dashboard.tsx  SolanaProviders.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx
frontend/src/idl/: trustchain_lite.json
frontend/src/lib/solana/: constants.ts  pdas.ts  program.ts
