[package]
name = "trustchain_lite"
version = "0.1.0"
description = "TrustChain Lite - escrow + reputation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustchain_lite"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

